[package]
name = "discord_story_bot"
version = "0.2.0"
authors = ["Matt Woelk <matt@mattwoelk.ca>"]
edition = "2021"
description = "A discord bot that runs .ink stories."
repository = "https://github.com/MattWoelk/DiscordStoryBot"
license = "MIT"
include = ["LICENSE", "Cargo.toml", "src/**/*.rs"]

[workspace]
resolver = "2"
members = [".", "runner"]


[dependencies]
ink_runner = { path = "runner", version = "0.1.0"}
serenity = { version = "0.12", default-features = false, features = ["client", "gateway", "rustls_backend", "model"] }
tokio = { version = "1.21.2", features = ["macros", "rt-multi-thread"] }
unicode-segmentation = "1.8.0"
clap = { version = "4.*", features = ["derive"] }
walkdir = "2"
reqwest = { version = "0.11.24", features = ["json"] }
shuttle-runtime = "0.47.0"
shuttle-serenity = "0.47.0"
tracing = "0.1.37"

[dev-dependencies]
pretty_assertions = "1.0"